<resources>
    <string name="app_name">Pure课程表</string>
    <string name="app_description">简单的开源课程表APP</string>
    <string name="crash_relaunch_attention">应用运行时出现错误</string>
    <string name="default_schedule_name">默认课表</string>
    <string name="new_schedule_name">新课表</string>
    <string name="app_crash">应用运行时发生崩溃</string>
    <string name="app_crash_summary">\u3000\u3000非常抱歉应用无法正常启动，您可以向我们反馈该问题以尽快修复。建议您检查并使用最新版本或清空应用数据后重新打开。</string>
    <string name="view_error_detail">查看错误报告</string>
    <string name="send_error_log">发送反馈邮件</string>
    <string name="feedback">问题反馈</string>
    <string name="crash_detail">错误详情</string>
    <string name="crash_detail_not_found">未找到错误报告！</string>
    <string name="print_error_log">输出到Logcat</string>
    <string name="schedule_control_bar">课程表控制栏</string>
    <string name="week_num_title">周数</string>
    <string name="current_week_title">当前周：第%1$d周</string>
    <string name="odd_week_description">%1$s周之单</string>
    <string name="even_week_description">%1$s周之双</string>
    <string name="month">%1$d月</string>
    <string name="month_date">%1$d月%2$d日</string>
    <string name="week_num">第%1$d周</string>
    <string name="current_week">当前周</string>
    <string name="next_week">下一周</string>
    <string name="not_current_week">非本周</string>
    <string name="in_vacation">放假中</string>
    <string name="weekday">周%1$s</string>
    <string name="course_detail_week_num">周数：第%1$s周</string>
    <string name="course_detail_week_num_simple">周数：%1$s</string>
    <string name="course_detail_section_time">时间：%1$s 第%2$s节\u3000%3$s</string>
    <string name="course_detail_section_time_simple">时间：%1$s 第%2$s节</string>
    <string name="course_detail_location">地点：%1$s</string>
    <string name="course_detail_location_multiline">地点：\n%1$s</string>
    <string name="open_drawer">打开侧边栏</string>
    <string name="close_drawer">关闭侧边栏</string>
    <string name="schedule_manage">课表管理</string>
    <string name="course_manage">课程管理</string>
    <string name="exit">退出</string>
    <string name="settings">设置</string>
    <string name="add_schedule">添加课表</string>
    <string name="list_empty">列表为空</string>
    <string name="schedule_has_set_as_current">已经是当前使用的课表！</string>
    <string name="current_schedule_set_success">课表切换成功！</string>
    <string name="unable_to_delete_using_schedule">无法删除正在使用的课表</string>
    <string name="ask_whether_delete_schedule">是否删除课表\"%1$s\"？</string>
    <string name="ask_whether_delete_schedule_msg">删除此课表后，所有此课表下的课程将会一并删除，请慎重操作！</string>
    <string name="delete">删除</string>
    <string name="delete_success">删除成功</string>
    <string name="schedule_edit">课表编辑</string>
    <string name="save_success">保存成功</string>
    <string name="schedule_name">课表名称</string>
    <string name="base_info">基本信息</string>
    <string name="schedule_start_date">开始日期</string>
    <string name="schedule_end_date">结束日期</string>
    <string name="course_per_day">每日课程数</string>
    <string name="schedule_time_edit">课表时间</string>
    <string name="course_cost_time_edit">修改上课时间</string>
    <string name="break_cost_time_edit">修改课间休息时间</string>
    <string name="cost_time_edit_attention">修改后将会自动推算所有时间安排</string>
    <string name="minute">%1$d分钟</string>
    <string name="about">关于</string>
    <string name="schedule_settings">课程表</string>
    <string name="schedule_settings_sum">课程表显示以及操作设置</string>
    <string name="general_settings">通用</string>
    <string name="general_settings_sum">基础的通用应用设置</string>
    <string name="schedule_background">课表背景</string>
    <string name="custom_schedule_background">自定义课表背景图片功能</string>
    <string name="custom_schedule_background_sum">启用后将可以自定义课表背景图片</string>
    <string name="select_schedule_background_image">选择图片作为课表背景</string>
    <string name="select_schedule_background_image_sum">从相册或文件中选择图片作为课表背景</string>
    <string name="schedule_background_scale_type">课表背景图片缩放方式</string>
    <string name="schedule_background_scale_type_sum">设定不同的缩放方式以完美显示图片</string>
    <string name="schedule_background_alpha">课表背景图片透明度</string>
    <string name="schedule_background_alpha_sum">调整课表背景图片的透明度</string>
    <string name="schedule_background_quality">课表背景图片质量</string>
    <string name="schedule_background_quality_sum">背景图片质量越高读取速度越慢\n注：设定后重新导入图片即可生效</string>
    <string name="custom_schedule_text_color">自定义课表文字与图标颜色</string>
    <string name="custom_schedule_text_color_sum">开启后可以自定义课表文字与图标颜色</string>
    <string name="tool_bar_tint_color">工具栏文字与图标颜色</string>
    <string name="tool_bar_tint_color_sum">修改顶部工具栏文字与图标颜色</string>
    <string name="time_text_color">课表时间文字颜色</string>
    <string name="time_text_color_sum">修改课表内的时间文字颜色</string>
    <string name="system_bar_appearance">系统栏文字图标颜色</string>
    <string name="system_bar_appearance_sum">调整课表状态栏与导航栏文字图标颜色</string>
    <string name="schedule_view_alpha">课表透明度</string>
    <string name="schedule_view_alpha_sum">调整课表透明度</string>
    <string name="schedule_background_fade_anim">课表背景渐入动画</string>
    <string name="schedule_background_fade_anim_sum">关闭后加载课表背景将不会使用动画效果</string>
    <string name="show_schedule_times">显示课程时间</string>
    <string name="show_schedule_times_sum">在课程时间列里显示课程时间</string>
    <string name="horizontal_course_cell_text">水平居中课程格文字</string>
    <string name="horizontal_course_cell_text_sum">横向居中显示课程格内的文字</string>
    <string name="vertical_course_cell_text">竖直居中课程格文字</string>
    <string name="vertical_course_cell_text_sum">竖向居中显示课程格内的文字</string>
    <string name="highlight_show_today_cell_color">今日课程日期格高亮显示颜色</string>
    <string name="highlight_show_today_cell_color_sum">修改今日课程日期格的高亮显示颜色</string>
    <string name="basic_settings">基础设置</string>
    <string name="keep_web_browser_cache">保留课程导入浏览器缓存与Cookies</string>
    <string name="keep_web_browser_cache_sum">开启后将不会自动清空浏览器缓存与Cookies\n注：开启后可能会导致信息安全问题</string>
    <string name="sync_to_calendar">同步到日历</string>
    <string name="clear_calendar">清空日历同步的数据</string>
    <string name="clear_calendar_sum">清空包括日历账户与日程相关的所有同步数据</string>
    <string name="sync_operation">同步操作</string>
    <string name="calendar_sync_attention">注意事项：\n1. 所有数据修改后必须同步一次到日历方可生效\n2. 如果同步的数据出现错误建议清空同步数据后重试\n3. App卸载后日历数据依然存在且账户无法直接删除\n4. 建议卸载App前手动清空数据删除日历账户\n5. 课程提醒可以在日历中单独设置或者此处整体配置</string>
    <string name="sync_settings">同步设置</string>
    <string name="calendar_sync_schedule">新增同步的课表默认允许同步</string>
    <string name="calendar_sync_schedule_sum">不进行同步的课表将不会同步到日历</string>
    <string name="calendar_sync_schedule_list">设置可以进行同步的课表</string>
    <string name="calendar_sync_schedule_editable">新增同步的课表默认可以编辑</string>
    <string name="calendar_sync_schedule_editable_sum">非特殊情况不建议直接修改日历日程</string>
    <string name="calendar_sync_schedule_editable_list">设置同步后可以进行日历编辑的课表</string>
    <string name="calendar_sync_schedule_default_visible">新增同步的课表默认日历中可见</string>
    <string name="calendar_sync_schedule_default_visible_sum">同步后依然可以在日历中再次修改</string>
    <string name="calendar_sync_schedule_default_visible_list">设置同步后在日历中可见的课表</string>
    <string name="calendar_sync_schedule_default_sum">注：同步过一次的课表将不会使用默认设定</string>
    <string name="add_calendar_reminder">新增同步的课表默认添加课程提醒</string>
    <string name="add_calendar_reminder_sum">开启后将会为同步的课程添加指定时间的提醒</string>
    <string name="add_calendar_reminder_list">设置同步后在日历中添加课程提醒的课表</string>
    <string name="calendar_reminder_minutes">提前提醒时间设定（单位：分钟）</string>
    <string name="calendar_reminder_minutes_sum">注：在日历中可以进行更加详细的设定</string>
    <string name="clear_calendar_settings">清空课表同步设置数据</string>
    <string name="clear_calendar_settings_sum">清空为每个课表设定的日历同步设置数据</string>
    <string name="backup">备份</string>
    <string name="backup_schedule">备份课表</string>
    <string name="backup_schedule_sum">备份指定课表到本地文件</string>
    <string name="restore">恢复</string>
    <string name="restore_schedule">恢复课表</string>
    <string name="restore_schedule_sum">从本地文件恢复所有课表</string>
    <string name="backup_schedule_attention">注意事项：\n1. 将会备份选定课表的除学期外所有信息\n2. 备份导出的文件不建议手动修改，可能导致无法恢复\n3. 备份导出的文件可以直接分享给他人导入</string>
    <string name="restore_schedule_attention">注意事项：\n1. 将会恢复选定文件中所有课表信息\n2. 恢复后的课表学期信息将会自适应设定\n3. 如果需要设定正确的学期时间请前往课表编辑界面</string>
    <string name="allow_import_empty_schedule">允许导入空课表</string>
    <string name="allow_import_empty_schedule_sum">允许在无任何导入课程时保存该课表</string>
    <string name="enable_online_course_import">启用在线导入功能</string>
    <string name="enable_online_course_import_sum">关闭后将不能使用且不会显示该功能</string>
    <string name="import_settings">导入设置</string>
    <string name="allow_import_incomplete_schedule">允许跳过部分无法导入的课程</string>
    <string name="allow_import_incomplete_schedule_sum">可能会导致导入的课表不完整\n注：部分课程解析可能不允许忽略错误</string>
    <string name="advanced_settings">高级设置</string>
    <string name="js_course_import_enable_network">允许基于JS的课程导入脚本联网</string>
    <string name="js_course_import_enable_network_sum">注：开启后将可能导致安全问题，慎用！</string>
    <string name="schedule_text_style">课表文字格式</string>
    <string name="schedule_text_size">课表文字大小</string>
    <string name="schedule_course_text_size">课程格文字大小</string>
    <string name="schedule_course_text_size_sum">调整课程格内容的文字大小</string>
    <string name="schedule_time_text_size">课表时间文字大小</string>
    <string name="schedule_time_text_size_sum">调整课表上下课时间的文字大小</string>
    <string name="schedule_number_text_size">课程节次文字大小</string>
    <string name="schedule_number_text_size_sum">调整课程节数序号的文字大小</string>
    <string name="schedule_header_month_text_size">课表表头月份文字大小</string>
    <string name="schedule_header_month_text_size_sum">调整顶部月份的文字大小</string>
    <string name="schedule_header_month_date_text_size">课表表头日期文字大小</string>
    <string name="schedule_header_month_date_text_size_sum">调整每列顶部日期的文字大小</string>
    <string name="schedule_header_weekday_text_size">课表表头星期文字大小</string>
    <string name="schedule_header_weekday_text_size_sum">调整每列顶部星期的文字大小</string>
    <string name="schedule_text_size_reset">重置课程表文字大小</string>
    <string name="schedule_background_preview_attention">注意：\n由于设置中预览的课程表高度受限，因此预览的课程表背景是可滚动且不含沉浸顶栏的高度（预览界面仅供参考）。</string>
    <string name="schedule_course_cell_attention">注意：\n自定义课程格高度将可能会影响文字显示效果\n建议通过调整文字大小或显示长度来影响课程格高度</string>
    <string name="schedule_course_cell_height">课程格高度</string>
    <string name="schedule_course_cell_auto_height">自动设置课程格高度</string>
    <string name="schedule_course_cell_auto_height_sum">根据文字大小与长度自动平均设置高度</string>
    <string name="schedule_course_cell_full_screen_same_height">使用相同的课程格高度填充屏幕</string>
    <string name="schedule_course_cell_full_screen_same_height_sum">在屏幕高度不足时可能会出现显示错误</string>
    <string name="schedule_course_cell_specific_height">单节课程的课程格高度（行高）</string>
    <string name="schedule_course_cell_specific_height_sum">当前高度：%1$ddp</string>
    <string name="schedule_course_cell_text">课程格文字</string>
    <string name="schedule_course_cell_auto_text_length">自动调整课程格文字长度</string>
    <string name="schedule_course_cell_auto_text_length_sum">自动课程格高度时显示全部文字</string>
    <string name="schedule_course_cell_text_length">课程格内所有文字最大长度</string>
    <string name="schedule_course_cell_text_length_sum">当前长度：%1$d个字符 (不包含\'非本周\'与省略号)</string>
    <string name="schedule_course_cell_all_course_text">显示完整课程名称</string>
    <string name="schedule_course_cell_all_course_text_sum">优先满足所有文字最大长度的限制</string>
    <string name="schedule_course_cell_course_text_length">课程名称最大显示长度</string>
    <string name="schedule_course_cell_course_text_length_sum">当前长度：%1$d个字符</string>
    <string name="course_cell_detail_content">课程格的详细信息展示</string>
    <string name="course_cell_detail_content_sum">在课程格中显示上课地点，教师名称</string>
    <string name="schedule_course_cell_text_no_new_line">课程详细信息显示不空行</string>
    <string name="schedule_course_cell_text_no_new_line_sum">课程名称与课程详细信息之间不空行</string>
    <string name="schedule_course_cell_padding">课程格间距</string>
    <string name="schedule_course_cell_horizontal_padding">课程格横向间距（左右）</string>
    <string name="schedule_course_cell_vertical_padding">课程格纵向间距（上下）</string>
    <string name="schedule_course_cell_padding_sum">当前间距：%1$dpx</string>
</resources>