<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.preference.Preference
        app:iconSpaceReserved="false"
        app:summary="@string/schedule_course_cell_attention" />

    <androidx.preference.PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/schedule_course_cell_height">

        <androidx.preference.CheckBoxPreference
            app:defaultValue="true"
            app:disableDependentsState="true"
            app:iconSpaceReserved="false"
            app:key="courseCellAutoHeight"
            app:summary="@string/schedule_course_cell_auto_height_sum"
            app:title="@string/schedule_course_cell_auto_height" />

        <androidx.preference.CheckBoxPreference
            app:defaultValue="false"
            app:dependency="courseCellAutoHeight"
            app:disableDependentsState="true"
            app:iconSpaceReserved="false"
            app:key="courseCellFullScreenSameHeight"
            app:summary="@string/schedule_course_cell_full_screen_same_height_sum"
            app:title="@string/schedule_course_cell_full_screen_same_height" />

        <androidx.preference.Preference
            app:dependency="courseCellFullScreenSameHeight"
            app:iconSpaceReserved="false"
            app:key="@string/pref_schedule_course_cell_specific_height"
            app:persistent="false"
            app:summary="@string/schedule_course_cell_specific_height_sum"
            app:title="@string/schedule_course_cell_specific_height" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/schedule_course_cell_padding">

        <androidx.preference.Preference
            app:iconSpaceReserved="false"
            app:key="@string/pref_schedule_course_cell_vertical_padding"
            app:persistent="false"
            app:summary="@string/schedule_course_cell_padding_sum"
            app:title="@string/schedule_course_cell_vertical_padding" />

        <androidx.preference.Preference
            app:iconSpaceReserved="false"
            app:key="@string/pref_schedule_course_cell_horizontal_padding"
            app:persistent="false"
            app:summary="@string/schedule_course_cell_padding_sum"
            app:title="@string/schedule_course_cell_horizontal_padding" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/schedule_course_cell_text">

        <androidx.preference.CheckBoxPreference
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="showScheduleTimes"
            app:summary="@string/show_schedule_times_sum"
            app:title="@string/show_schedule_times" />

        <androidx.preference.CheckBoxPreference
            app:defaultValue="true"
            app:disableDependentsState="true"
            app:iconSpaceReserved="false"
            app:key="courseCellAutoTextLength"
            app:summary="@string/schedule_course_cell_auto_text_length_sum"
            app:title="@string/schedule_course_cell_auto_text_length" />

        <androidx.preference.Preference
            app:dependency="courseCellAutoTextLength"
            app:iconSpaceReserved="false"
            app:key="@string/pref_schedule_course_cell_text_length"
            app:persistent="false"
            app:summary="@string/schedule_course_cell_text_length_sum"
            app:title="@string/schedule_course_cell_text_length" />

        <androidx.preference.CheckBoxPreference
            app:defaultValue="true"
            app:disableDependentsState="true"
            app:iconSpaceReserved="false"
            app:key="courseCellShowAllCourseText"
            app:summary="@string/schedule_course_cell_all_course_text_sum"
            app:title="@string/schedule_course_cell_all_course_text" />

        <androidx.preference.Preference
            app:dependency="courseCellShowAllCourseText"
            app:iconSpaceReserved="false"
            app:key="@string/pref_schedule_course_cell_course_text_length"
            app:persistent="false"
            app:summary="@string/schedule_course_cell_course_text_length_sum"
            app:title="@string/schedule_course_cell_course_text_length" />

        <androidx.preference.MultiSelectListPreference
            app:defaultValue="@array/course_cell_detail_content_value_default"
            app:entries="@array/course_cell_detail_content"
            app:entryValues="@array/course_cell_detail_content_values"
            app:iconSpaceReserved="false"
            app:key="courseCellDetailContent"
            app:summary="@string/course_cell_detail_content_sum"
            app:title="@string/course_cell_detail_content" />

        <androidx.preference.CheckBoxPreference
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="courseCellTextNoNewLine"
            app:summary="@string/schedule_course_cell_text_no_new_line_sum"
            app:title="@string/schedule_course_cell_text_no_new_line" />

    </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>