<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.preference.CheckBoxPreference
        app:defaultValue="true"
        app:iconSpaceReserved="false"
        app:key="enableOnlineCourseImport"
        app:summary="@string/enable_online_course_import_sum"
        app:title="@string/enable_online_course_import" />

    <androidx.preference.PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/import_settings">

        <androidx.preference.CheckBoxPreference
            app:defaultValue="false"
            app:dependency="enableOnlineCourseImport"
            app:iconSpaceReserved="false"
            app:key="allowImportEmptySchedule"
            app:summary="@string/allow_import_empty_schedule_sum"
            app:title="@string/allow_import_empty_schedule" />

        <androidx.preference.CheckBoxPreference
            app:defaultValue="false"
            app:dependency="enableOnlineCourseImport"
            app:iconSpaceReserved="false"
            app:key="allowImportIncompleteSchedule"
            app:summary="@string/allow_import_incomplete_schedule_sum"
            app:title="@string/allow_import_incomplete_schedule" />

        <androidx.preference.CheckBoxPreference
            app:defaultValue="false"
            app:dependency="enableOnlineCourseImport"
            app:iconSpaceReserved="false"
            app:key="keepWebProviderCache"
            app:summary="@string/keep_web_browser_cache_sum"
            app:title="@string/keep_web_browser_cache" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/advanced_settings">

        <androidx.preference.CheckBoxPreference
            app:defaultValue="false"
            app:dependency="enableOnlineCourseImport"
            app:iconSpaceReserved="false"
            app:key="jsCourseImportEnableNetwork"
            app:summary="@string/js_course_import_enable_network_sum"
            app:title="@string/js_course_import_enable_network" />

    </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>